# zfs-replicate

./: AUTHORS  Makefile.am  Makefile.in  README  TODO  configure  configure.ac  test  zfs-replicate
debian/: changelog  control  copyright
